Week5/Learning/practice/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: practice
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
