Week5/Learning/practice/svc-apache.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-apache-svc
  namespace: practice
spec:
  selector:
    app: myapp-apache
  ports:
  - port: 80
    targetPort: 80
