Week5/Learning/practice/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: practice
  labels:
    name: myingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/apache"
        backend:
          service:
            name: myapp-apache-svc
            port:
              number: 80
